--- a/src/components/Profile/Description.module.css
+++ b/src/components/Profile/Description.module.css
@@ -3,25 +3,25 @@
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  padding: 35px;
+  padding: 35px 70px;
 }
 
 .avatar {
-  height: 200px;
-  width: 200px;
+  height: 150px;
+  width: 150px;
   border-radius: 50%;
   margin-bottom: 30px;
 }
 
 .name {
   font-weight: 700;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .tag {
   color: gray;
   font-size: 18px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .location {
